--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
                 <i class="fas fa-bars"></i>
             </label>
         <ul>
-            <li><a  href="#">Home</a> </li>
-            <li><a href="#">Shop</a> </li>
-            <li><a href="#">Contact</a> </li>
+            <li><a  href="#home">Home</a> </li>
+            <li><a href="#shop">Shop</a> </li>
+            <li><a href="#contact">Contact</a> </li>
             <li><img class="img" src="./images/Heart.png"></li>
             <li><img class="img" src="./images/Shopping Cart.png"> </li>
         </ul>
@@ -42,6 +42,7 @@
                 <span class="searchtext">search your product</span>
             </div>
         </div>
+        <div id="shop">
         <div class="items">
             <p>Mobile & Gadgets</p>
             <p>Tv & Entertainments</p>
@@ -398,8 +399,8 @@
 </div>
 <div class="fourth">
     <div class="row3">
+        <div class="px"><img src="./images/[PXPNG 1.png"> </div>
         <div><p>PS5 Controller </p></div>
-    <div class="px"><img src="./images/[PXPNG 1.png"> </div>
     </div>    
     <div class="buy">Buy Now</div> 
 </div>
@@ -797,6 +798,7 @@
 </div>
 </div>
 </div> 
+</div>
 <div class="sixth">
     <div class="content">
         <span class="span1">
